--- a/.editorconfig
+++ b/.editorconfig
@@ -2,12 +2,9 @@ root = true
 
 [*]
 charset = utf-8
-indent_style = space
-indent_size = 2
-tab_width = 8
 end_of_line = lf
 insert_final_newline = true
 
-[*.{c,h,in,lua}]
-max_line_length = 100
+[*.lua]
+max_line_length = 120
 
