--- a/.emmyrc.json
+++ b/.emmyrc.json
@@ -1,15 +1,9 @@
 {
   "$schema": "https://raw.githubusercontent.com/EmmyLuaLs/emmylua-analyzer-rust/refs/heads/main/crates/emmylua_code_analysis/resources/schema.json",
-  "diagnostics" : {
-    "disable" : [
-      "unnecessary-if"
+  "diagnostics": {
+    "globals": [
+      "vim",
+      "it"
     ]
-  },
-  "codeAction": {
-    "insertSpace": true
-  },
-  "strict": {
-    "typeCall": true,
-    "arrayIndex": true
   }
 }
