--- a/.editorconfig
+++ b/.editorconfig
@@ -10,3 +10,21 @@ max_line_length = 100
 indent_style = space
 indent_size = 2
 insert_final_newline = true
+
+[*.vim]
+max_line_length = 80
+indent_style = space
+insert_final_newline = true
+indent_size = 2
+
+[vimrc]
+max_line_length = 80
+indent_style = space
+insert_final_newline = true
+indent_size = 2
+
+[gvimrc]
+max_line_length = 80
+indent_style = space
+insert_final_newline = true
+indent_size = 2
